--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -1,68 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Sunnyside agency landing page</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  About
-  Services
-  Projects
-  Contact
+    <link rel="stylesheet" href="design.css" />
 
-  We are creatives
+    <title>Frontend | Sunnyside agency landing page</title>
+  </head>
+  <body>
+    <!-- <div class="moda"></div> -->
+    <div class="head">
+      <img class="menu" src="images/menu-svgrepo-com.svg" alt="" />
+      <div class="menu-bar">
+        <ul>
+          <li><a href="#">About</a></li>
+          <br />
+          <li><a href="#">Services</a></li>
+          <br />
+          <li><a href="#">Projects</a></li>
+          <br />
+          <li>
+            <a href="mailto:ugwumiracle123@gmail.com"
+              ><button>Contact</button></a
+            >
+          </li>
+        </ul>
+      </div>
+      <h1 class="head-head">sunnyside</h1>
+      <a class="head-link" href="#">About</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a class="head-link" href="#">Services</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a class="head-link" href="#">Projects</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a class="head-link" href="mailto:ugwumiracle123@gmail.com"
+        ><button>Contact</button></a
+      >
+      <h1 class="head-title">WE ARE CREATIVES</h1>
 
-  Transform your brand
+      <img class="arrow-down" src="images/icon-arrow-down.svg" alt="" />
+    </div>
+    <div class="section-1"></div>
 
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
+    <div class="section-2">
+      <h1>
+        Transform Your<br />
+        Brand
+      </h1>
+      <h4>
+        We are creatives Transform your brand We are a full-service creative
+        agency specializing in helping brands grow fast. Engage your clients
+        through compelling visuals that do most of the marketing for you.
+      </h4>
+      <a href="#">Learn more</a>
+    </div>
 
-  Learn more
+    <div class="section-3"></div>
 
-  Stand out to the right audience
+    <div class="section-4">
+      <h1>Stand out to the right <br />audience</h1>
+      <h4>
+        Using a collaborative formula of designers, researchers, photographers,
+        videographers, and copywriters, we’ll build and extend your brand in
+        digital places.
+      </h4>
+      <a href="#">Learn more</a>
+    </div>
 
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
+    <div class="section-5">
+      <h1>Graphic design</h1>
+      <h4>
+        Great design makes you memorable. We deliver artwork that underscores
+        your brand message and captures potential clients’ attention.
+      </h4>
+    </div>
 
-  Learn more
+    <div class="section-6">
+      <h1>Photography</h1>
+      <h4>
+        Increase your credibility by getting the most stunning, high-quality
+        photos that improve your business image.
+      </h4>
+    </div>
 
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
+    <div class="testimonial">
+      <h1 class="testi-head">CLIENT TESTIMONIALS</h1>
 
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+      <div class="testimonial-1">
+        <img class="testimonial-img" src="images/image-emily.jpg" alt="emily" />
+        <p class="testi-descrip">
+          We put our trust in Sunnyside and they delivered, making sure our
+          needs were met and deadlines were always hit.
+        </p>
+        <h4 class="testi-name">Emily R.</h4>
+        <p class="testo-office">Marketing Director</p>
+      </div>
 
-  Client testimonials
+      <div class="testimonial-2">
+        <img
+          class="testimonial-img"
+          src="images/image-thomas.jpg"
+          alt="thomas"
+        />
+        <p class="testi-descrip">
+          Sunnyside’s enthusiasm coupled with their keen interest in our brand’s
+          success made it a satisfying and enjoyable experience.
+        </p>
+        <h4 class="testi-name">Thomas S.</h4>
+        <p class="testo-office">Chief Operating Officer</p>
+      </div>
 
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
+      <div class="testimonial-3">
+        <img
+          class="testimonial-img"
+          src="images/image-jennie.jpg"
+          alt="Jennie"
+        />
+        <p class="testi-descrip">
+          Incredible end result! Our sales increased over 400% when we worked
+          with Sunnyside. Highly recommended!
+        </p>
+        <h4 class="testi-name">Jennie F.</h4>
+        <p class="testo-office">Business Owner</p>
+      </div>
+    </div>
 
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
+    <div class="section-7"></div>
+    <div class="section-8"></div>
+    <div class="section-9"></div>
+    <div class="section-10"></div>
 
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
+    <div class="footer">
+      <h1 class="footer-head">sunnyside</h1>
+      <a class="footer-link" href="#">About</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a class="footer-link" href="#">Services</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a class="footer-link" href="#">Projects</a><br />
 
-  About
-  Services
-  Projects
-  Contact
+      <a class="footer-link social-media" href="#"
+        ><img src="images/icon-facebook.svg" alt="" /></a
+      >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a class="footer-link social-media" href="#"
+        ><img src="images/icon-instagram.svg" alt="" /></a
+      >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a class="footer-link social-media" href="#"
+        ><img src="images/icon-twitter.svg" alt="" /></a
+      >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a class="footer-link social-media" href="#"
+        ><img src="images/icon-pinterest.svg" alt=""
+      /></a>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
